--- a/Makefile.target
+++ b/Makefile.target
@@ -61,6 +61,11 @@ common_LOCAL_SRC_FILES += \
 #
 
 HW_SOURCES := \
+    bt/core.c \
+    bt/hci.c \
+    bt/hid.c \
+    bt/l2cap.c \
+    bt/sdp.c \
     core/irq.c \
     core/qdev.c \
     core/sysbus.c \
