--- a/Makefile.target
+++ b/Makefile.target
@@ -81,6 +81,11 @@ HW_SOURCES := \
     android/goldfish/tty.c \
     android/goldfish/vmem.c \
     pci/pci.c \
+    usb/dev-hid.c \
+    usb/dev-hub.c \
+    usb/dev-storage.c \
+    usb/hcd-ohci.c \
+    usb/core.c \
     watchdog/watchdog.c
 
 
