Revert "SCSI: Remove obsolete files."
This reverts commit 4bbd1f42c6455f56a434338e2ffb63523df0bfa0.

--- a/Makefile.target
+++ b/Makefile.target
@@ -81,6 +81,7 @@ HW_SOURCES := \
     android/goldfish/tty.c \
     android/goldfish/vmem.c \
     pci/pci.c \
+    scsi/scsi-disk.c \
     usb/dev-hid.c \
     usb/dev-hub.c \
     usb/dev-storage.c \
